; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_hwdec.c_hwdec_get_hwcontext_fns.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_hwdec.c_hwdec_get_hwcontext_fns.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hwcontext_fns = type { i32 }

@hwcontext_fns = common dso_local global %struct.hwcontext_fns** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.hwcontext_fns* @hwdec_get_hwcontext_fns(i32 %0) #0 {
  %2 = alloca %struct.hwcontext_fns*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %29, %1
  %6 = load %struct.hwcontext_fns**, %struct.hwcontext_fns*** @hwcontext_fns, align 8
  %7 = load i32, i32* %4, align 4
  %8 = sext i32 %7 to i64
  %9 = getelementptr inbounds %struct.hwcontext_fns*, %struct.hwcontext_fns** %6, i64 %8
  %10 = load %struct.hwcontext_fns*, %struct.hwcontext_fns** %9, align 8
  %11 = icmp ne %struct.hwcontext_fns* %10, null
  br i1 %11, label %12, label %32

12:                                               ; preds = %5
  %13 = load %struct.hwcontext_fns**, %struct.hwcontext_fns*** @hwcontext_fns, align 8
  %14 = load i32, i32* %4, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.hwcontext_fns*, %struct.hwcontext_fns** %13, i64 %15
  %17 = load %struct.hwcontext_fns*, %struct.hwcontext_fns** %16, align 8
  %18 = getelementptr inbounds %struct.hwcontext_fns, %struct.hwcontext_fns* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %3, align 4
  %21 = icmp eq i32 %19, %20
  br i1 %21, label %22, label %28

22:                                               ; preds = %12
  %23 = load %struct.hwcontext_fns**, %struct.hwcontext_fns*** @hwcontext_fns, align 8
  %24 = load i32, i32* %4, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds %struct.hwcontext_fns*, %struct.hwcontext_fns** %23, i64 %25
  %27 = load %struct.hwcontext_fns*, %struct.hwcontext_fns** %26, align 8
  store %struct.hwcontext_fns* %27, %struct.hwcontext_fns** %2, align 8
  br label %33

28:                                               ; preds = %12
  br label %29

29:                                               ; preds = %28
  %30 = load i32, i32* %4, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %4, align 4
  br label %5

32:                                               ; preds = %5
  store %struct.hwcontext_fns* null, %struct.hwcontext_fns** %2, align 8
  br label %33

33:                                               ; preds = %32, %22
  %34 = load %struct.hwcontext_fns*, %struct.hwcontext_fns** %2, align 8
  ret %struct.hwcontext_fns* %34
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
